[package]
name = "simple_table"
version = "0.1.0"
authors = ["Zotho <svjatoslavalekseef2@gmail.com>"]
edition = "2018"

[profile.release]
opt-level = 'z'  # Optimize for size.
lto = true
codegen-units = 1
panic = 'abort'

[dependencies]
# fltk = {version="^0.9"}
fltk = {path="../fltk-rs/fltk"}
mysql = "*"
lazy_static = "1.4.0"